# clauseguard

./: .env.example  .gitignore  README.md  clauseguard-review-test-contract.docx  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  tools.cmd
backend/alembic/: env.py
backend/alembic/versions/: 116f9637e79a_add_degraded_reason_to_contracts.py  3745081123ef_create_users_contracts_clauses_tables.py  427c7b4e136f_make_clause_explanation_nullable.py  5d635143e834_baseline_auth_and_contracts.py  77fa49444bdb_make_clause_risk_level_and_confidence_.py  7b636a8b845a_make_user_id_nullable.py  c3e7eaca7c0e_add_pgvector_embedding_columns_and_.py
backend/app/: celery_app.py  main.py
backend/app/api/: account.py  contracts.py  deps.py  health.py  router.py  search.py
backend/app/core/: config.py  database.py  errors.py  redis.py  storage.py  tracing.py
backend/app/middleware/: rate_limiter.py  request_id.py
backend/app/models/: __init__.py  auth.py  base.py  clause.py  clause_template.py  contract.py  user.py
backend/app/schemas/: __init__.py  clause.py  contract.py  search.py
backend/app/services/: cache.py  clause_analyzer.py  clause_search.py  clause_splitter.py  document_parser.py  embedding.py  llm_client.py  progress.py  redline_generator.py  result_cache.py  review_exporter.py  semantic_cache.py  template_matcher.py  text_cleaning.py
backend/app/tasks/: __init__.py  _session.py  classify.py  dispatchers.py  finalize.py  parse.py  pipeline.py  redline.py  (+1 more)
backend/scripts/: fix_mojibake.py  seed_templates.py
backend/tests/: conftest.py
(+99 files in other folders)
