[project]
name = "clauseguard"
version = "0.1.0"
description = "AI-Powered Contract Review Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.3",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "celery[redis]==5.4.0",
    "redis>=5.2.0",
    "litellm>=1.60.0",
    "pybreaker>=1.2.0",
    "llama-parse>=0.6.0",
    "python-docx>=1.1.0",
    "mammoth>=1.8.0",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "boto3>=1.36.0",
    "flower>=2.0.0",
    "python-multipart>=0.0.20",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = ["alembic/versions/*", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]